--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "font-awesome": "^4.7.0",
     "mdi": "^2.0.46",
+    "moment": "^2.19.1",
     "normalize.css": "^7.0.0",
     "vue": "^2.4.2",
     "vue-router": "^2.7.0"
