--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "mdi": "^2.0.46",
     "moment": "^2.19.1",
     "normalize.css": "^7.0.0",
+    "screamerjs": "^1.2.0",
     "vue": "^2.4.2",
-    "vue-router": "^2.7.0"
+    "vue-router": "^2.7.0",
+    "vuex": "^3.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
