--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "font-awesome": "^4.7.0",
+    "localforage": "^1.5.2",
     "mdi": "^2.0.46",
     "moment": "^2.19.1",
     "normalize.css": "^7.0.0",
